--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./invoice.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <main class="main">
@@ -284,6 +284,6 @@
         </div>
       </div>
     </main>
-    <script src="./invoice.js"></script>
+    <script src="./index.jsclea"></script>
   </body>
 </html>
